--- a/package.json
+++ b/package.json
@@ -27,12 +27,13 @@
     "graphql": "^16.10.0",
     "graphql-request": "^7.1.2",
     "lucide": "^0.475.0",
-    "lucide-react": "^0.475.0",
+    "lucide-react": "^0.476.0",
     "next": "15.1.7",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-scroll-sync": "^0.11.2",
+    "recharts": "^2.15.1",
     "server-only": "^0.0.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
@@ -56,8 +57,12 @@
     "postcss": "^8",
     "prettier": "^3.5.1",
     "prettier-plugin-tailwindcss": "^0.6.11",
+    "tailwind-scrollbar": "^4.0.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5",
     "typescript-graphql-request": "^4.4.6"
+  },
+  "overrides": {
+    "react-is": "^19.0.0-rc-69d4b800-20241021"
   }
 }
