--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@rainbow-me/rainbowkit": "^2.2.3",
     "@tanstack/react-query": "^5.66.8",
     "@tanstack/react-table": "^8.21.2",
+    "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
