--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "server-only": "^0.0.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "usehooks-ts": "^3.1.1",
+    "vaul": "^1.1.2",
     "viem": "^2.23.1",
     "wagmi": "^2.14.11",
     "zod": "^3.24.2"
