--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
-NEXT_PUBLIC_URL=
-
 WHISK_API_URL=
 WHISK_API_KEY=
 
+NEXT_PUBLIC_URL=
+NEXT_PUBLIC_WALLET_CONNECT_PROJECT_ID=
 NEXT_PUBLIC_RPC_URL_1=
 NEXT_PUBLIC_RPC_URL_2=
