--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@morpho-org/simulation-sdk": "^3.0.0-next.1",
     "@morpho-org/simulation-sdk-wagmi": "^3.0.0-next.0",
     "@number-flow/react": "^0.5.5",
+    "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-popover": "^1.1.6",
