--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,4 @@ NEXT_PUBLIC_WALLET_CONNECT_PROJECT_ID=
 NEXT_PUBLIC_RPC_URL_1=
 NEXT_PUBLIC_RPC_URL_2=
 NEXT_PUBLIC_RPC_URL_3=
+NEXT_PUBLIC_PLAUSIBLE_DATA_DOMAIN=
