--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "@hookform/resolvers": "^4.1.2",
     "@morpho-org/blue-sdk": "^3.0.0-next.4",
     "@morpho-org/blue-sdk-viem": "^3.0.0-next.1",
-    "@morpho-org/bundler-sdk-viem": "^3.0.0-next.1",
+    "@morpho-org/bundler-sdk-viem": "3.0.0-next.3",
     "@morpho-org/morpho-ts": "^2.0.2-next.0",
-    "@morpho-org/simulation-sdk": "^3.0.0-next.1",
+    "@morpho-org/simulation-sdk": "^3.0.0-next.3",
     "@number-flow/react": "^0.5.5",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.6",
@@ -34,6 +34,7 @@
     "graphql-request": "^7.1.2",
     "lucide": "^0.475.0",
     "lucide-react": "^0.476.0",
+    "motion": "^12.6.2",
     "next": "15.1.7",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
