--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "lucide": "^0.475.0",
     "lucide-react": "^0.476.0",
     "motion": "^12.6.2",
-    "next": "15.1.7",
+    "next": "^15.2.4",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
