--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "@morpho-org/morpho-ts": "^2.0.2-next.0",
     "@morpho-org/simulation-sdk": "^3.0.0-next.3",
     "@number-flow/react": "^0.5.5",
+    "@paraswap/sdk": "^7.2.3",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-popover": "^1.1.6",
+    "@radix-ui/react-slider": "^1.2.4",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.4",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@rainbow-me/rainbowkit": "^2.2.3",
     "@tanstack/react-query": "^5.66.8",
