Added maintenance message

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,6 @@ NEXT_PUBLIC_RPC_URL_1=
 NEXT_PUBLIC_RPC_URL_2=
 NEXT_PUBLIC_RPC_URL_3=
 NEXT_PUBLIC_PLAUSIBLE_DATA_DOMAIN=
+
+# Maintenance mode brings the app down
+MAINTENANCE_MODE_ENABLED=0
