--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "concurrently --names \"next,codegen\" --prefix-colors \"cyan.bold,yellow.bold\" \"next dev --turbopack\" \"bun codegen --watch\"",
     "build": "bun codegen && next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "next lint --dir src --dir test",
     "codegen": "graphql-codegen --config codegen.ts",
     "test": "vitest"
   },
