--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,9 @@ yarn-error.log*
 next-env.d.ts
 
 generated
+
+# Playwright
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
