--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "next start",
     "lint": "next lint --dir src --dir test",
     "codegen": "graphql-codegen --config codegen.ts",
-    "test": "vitest"
+    "test:vitest": "vitest",
+    "test:playwright": "playwright test",
+    "test": "bun test:vitest run && bun test:playwright"
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.2",
@@ -65,6 +67,7 @@
     "@morpho-org/morpho-test": "^2.3.0",
     "@morpho-org/test": "^2.1.3",
     "@parcel/watcher": "^2.5.1",
+    "@playwright/test": "^1.52.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
