Fix test naming

--- a/.github/workflows/vitest.yml
+++ b/.github/workflows/vitest.yml
@@ -8,6 +8,7 @@ on:
 
 jobs:
   test:
+    name: Vitest Tests
     if: github.event.pull_request.draft == false
     runs-on: ubuntu-latest
     env:
