Luquidity migrator - UI

--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "dotenv": "^16.4.7",
     "graphql": "^16.10.0",
     "graphql-request": "^7.1.2",
-    "json-bigint": "^1.0.0",
     "lucide": "^0.475.0",
     "lucide-react": "^0.476.0",
     "motion": "^12.6.2",
@@ -55,6 +54,7 @@
     "server-only": "^0.0.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "use-debounce": "^10.0.4",
     "usehooks-ts": "^3.1.1",
     "vaul": "^1.1.2",
     "viem": "^2.29.0",
@@ -73,7 +73,6 @@
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
-    "@types/json-bigint": "^1.0.4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
