--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,16 +21,14 @@ jobs:
   vitest:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-      - name: Set up Bun
-        uses: oven-sh/setup-bun@v1
+      - uses: pnpm/action-setup@v4
+
+      - uses: actions/setup-node@v4
         with:
-          bun-version: latest
-
-      - name: Install dependencies
-        run: bun install
+          node-version-file: .nvmrc
+          cache: pnpm
 
       - name: Restore Foundry RPC cache
         uses: actions/cache/restore@v3
@@ -45,8 +43,9 @@ jobs:
         with:
           cache: false
 
-      - name: Run tests
-        run: bun run vitest run
+      - run: pnpm install --frozen-lockfile
+
+      - run: pnpm vitest run
 
       - name: Save Foundry RPC cache
         if: always()
@@ -58,16 +57,14 @@ jobs:
   playwright:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up Bun
-        uses: oven-sh/setup-bun@v1
+      - uses: pnpm/action-setup@v4
+
+      - uses: actions/setup-node@v4
         with:
-          bun-version: latest
-
-      - name: Install dependencies
-        run: bun install
+          node-version-file: .nvmrc
+          cache: pnpm
 
       - name: Restore Foundry RPC cache
         uses: actions/cache/restore@v3
@@ -82,14 +79,16 @@ jobs:
         with:
           cache: false
 
+      - run: pnpm install --frozen-lockfile
+
       - name: Install Playwright Browsers
-        run: bun run playwright install --with-deps
+        run: pnpm playwright install --with-deps
 
       - name: Run Codegen
-        run: bun codegen
+        run: pnpm codegen
 
       - name: Run Playwright tests
-        run: bun run test:playwright
+        run: pnpm test:playwright
 
       - uses: actions/upload-artifact@v4
         if: ${{ !cancelled() }}
