--- a/package.json
+++ b/package.json
@@ -3,16 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "concurrently --names \"next,codegen\" --prefix-colors \"cyan.bold,yellow.bold\" \"next dev --turbopack\" \"bun codegen --watch\"",
-    "build": "bun codegen && next build",
+    "dev": "concurrently --names \"next,codegen\" --prefix-colors \"cyan.bold,yellow.bold\" \"next dev --turbopack\" \"pnpm codegen --watch\"",
+    "build": "pnpm codegen && next build",
     "start": "next start",
     "lint": "next lint --dir src --dir test",
     "codegen": "graphql-codegen --config codegen.ts",
     "test:vitest": "vitest",
     "test:playwright": "playwright test",
-    "test": "bun test:vitest run && bun test:playwright"
+    "test": "pnpm test:vitest run && pnpm test:playwright"
   },
+  "packageManager": "pnpm@10.11.0",
   "dependencies": {
+    "@graphql-typed-document-node/core": "^3.2.0",
     "@hookform/resolvers": "^4.1.2",
     "@morpho-org/blue-sdk": "^3.0.9",
     "@morpho-org/blue-sdk-viem": "^3.1.1",
@@ -30,6 +32,7 @@
     "@radix-ui/react-switch": "^1.1.4",
     "@radix-ui/react-tabs": "^1.1.4",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@radix-ui/react-visually-hidden": "^1.2.3",
     "@rainbow-me/rainbowkit": "^2.2.3",
     "@tanstack/react-query": "^5.66.8",
     "@tanstack/react-table": "^8.21.2",
@@ -66,6 +69,7 @@
     "@eslint/eslintrc": "^3",
     "@graphql-codegen/cli": "^5.0.5",
     "@graphql-codegen/schema-ast": "^4.1.0",
+    "@graphql-codegen/typescript-graphql-request": "^6.3.0",
     "@morpho-org/morpho-test": "^2.3.0",
     "@morpho-org/test": "^2.1.3",
     "@parcel/watcher": "^2.5.1",
