--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "concurrently": "^9.1.2",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
+    "fast-check": "^4.1.1",
     "jsdom": "^26.0.0",
     "pino-pretty": "^13.0.0",
     "postcss": "^8",
