--- a/package.json
+++ b/package.json
@@ -14,55 +14,55 @@
   },
   "packageManager": "pnpm@10.11.0",
   "dependencies": {
-    "@graphql-typed-document-node/core": "^3.2.0",
-    "@hookform/resolvers": "^4.1.2",
-    "@morpho-org/blue-sdk": "^3.0.9",
-    "@morpho-org/blue-sdk-viem": "^3.1.1",
-    "@morpho-org/bundler-sdk-viem": "^3.1.3",
-    "@morpho-org/morpho-ts": "^2.3.0",
-    "@morpho-org/simulation-sdk": "^3.0.1",
-    "@number-flow/react": "^0.5.5",
-    "@paraswap/sdk": "^7.2.3",
-    "@radix-ui/react-checkbox": "^1.1.4",
-    "@radix-ui/react-dialog": "^1.1.6",
-    "@radix-ui/react-label": "^2.1.2",
-    "@radix-ui/react-popover": "^1.1.6",
-    "@radix-ui/react-slider": "^1.2.4",
-    "@radix-ui/react-slot": "^1.1.2",
-    "@radix-ui/react-switch": "^1.1.4",
-    "@radix-ui/react-tabs": "^1.1.4",
-    "@radix-ui/react-tooltip": "^1.1.8",
-    "@radix-ui/react-visually-hidden": "^1.2.3",
-    "@rainbow-me/rainbowkit": "^2.2.3",
-    "@tanstack/react-query": "^5.66.8",
-    "@tanstack/react-table": "^8.21.2",
-    "@vercel/analytics": "^1.5.0",
-    "@vercel/functions": "^2.0.0",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "decimal.js": "^10.5.0",
-    "dotenv": "^16.4.7",
-    "graphql": "^16.10.0",
-    "graphql-request": "^7.1.2",
-    "lucide": "^0.475.0",
-    "lucide-react": "^0.476.0",
-    "motion": "^12.6.2",
+    "@graphql-typed-document-node/core": "3.2.0",
+    "@hookform/resolvers": "4.1.3",
+    "@morpho-org/blue-sdk": "3.0.9",
+    "@morpho-org/blue-sdk-viem": "3.1.1",
+    "@morpho-org/bundler-sdk-viem": "3.1.4",
+    "@morpho-org/morpho-ts": "2.3.0",
+    "@morpho-org/simulation-sdk": "3.0.1",
+    "@number-flow/react": "0.5.9",
+    "@paraswap/sdk": "7.3.1",
+    "@radix-ui/react-checkbox": "1.3.2",
+    "@radix-ui/react-dialog": "1.1.14",
+    "@radix-ui/react-label": "2.1.7",
+    "@radix-ui/react-popover": "1.1.14",
+    "@radix-ui/react-slider": "1.3.5",
+    "@radix-ui/react-slot": "1.2.3",
+    "@radix-ui/react-switch": "1.2.5",
+    "@radix-ui/react-tabs": "1.1.12",
+    "@radix-ui/react-tooltip": "1.2.7",
+    "@radix-ui/react-visually-hidden": "1.2.3",
+    "@rainbow-me/rainbowkit": "2.2.5",
+    "@tanstack/react-query": "5.79.0",
+    "@tanstack/react-table": "8.21.3",
+    "@vercel/analytics": "1.5.0",
+    "@vercel/functions": "2.1.0",
+    "class-variance-authority": "0.7.1",
+    "clsx": "2.1.1",
+    "decimal.js": "10.5.0",
+    "dotenv": "16.5.0",
+    "graphql": "16.11.0",
+    "graphql-request": "7.2.0",
+    "lucide": "0.475.0",
+    "lucide-react": "0.476.0",
+    "motion": "12.15.0",
     "next": "15.3.6",
-    "next-themes": "^0.4.4",
+    "next-themes": "0.4.6",
     "react": "19.1.2",
     "react-dom": "19.1.2",
-    "react-hook-form": "^7.54.2",
-    "react-scroll-sync": "^0.11.2",
-    "recharts": "^2.15.1",
-    "server-only": "^0.0.1",
-    "tailwind-merge": "^3.0.1",
-    "tailwindcss-animate": "^1.0.7",
-    "use-debounce": "^10.0.4",
-    "usehooks-ts": "^3.1.1",
-    "vaul": "^1.1.2",
-    "viem": "^2.29.0",
-    "wagmi": "^2.14.11",
-    "zod": "^3.24.2"
+    "react-hook-form": "7.56.4",
+    "react-scroll-sync": "0.11.3",
+    "recharts": "2.15.3",
+    "server-only": "0.0.1",
+    "tailwind-merge": "3.3.0",
+    "tailwindcss-animate": "1.0.7",
+    "use-debounce": "10.0.4",
+    "usehooks-ts": "3.1.1",
+    "vaul": "1.1.2",
+    "viem": "2.30.5",
+    "wagmi": "2.15.4",
+    "zod": "3.25.42"
   },
   "devDependencies": {
     "@0no-co/graphqlsp": "^1.12.16",
