--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@radix-ui/react-tabs": "1.1.12",
     "@radix-ui/react-tooltip": "1.2.7",
     "@radix-ui/react-visually-hidden": "1.2.3",
-    "@rainbow-me/rainbowkit": "2.2.5",
+    "@rainbow-me/rainbowkit": "2.2.9",
     "@tanstack/react-query": "5.79.0",
     "@tanstack/react-table": "8.21.3",
     "@vercel/analytics": "1.5.0",
@@ -44,10 +44,9 @@
     "dotenv": "16.5.0",
     "graphql": "16.11.0",
     "graphql-request": "7.2.0",
-    "lucide": "0.475.0",
     "lucide-react": "0.476.0",
     "motion": "12.15.0",
-    "next": "15.3.6",
+    "next": "15.5.7",
     "next-themes": "0.4.6",
     "react": "19.1.2",
     "react-dom": "19.1.2",
@@ -60,20 +59,20 @@
     "use-debounce": "10.0.4",
     "usehooks-ts": "3.1.1",
     "vaul": "1.1.2",
-    "viem": "2.30.5",
-    "wagmi": "2.15.4",
+    "viem": "2.38.5",
+    "wagmi": "2.19.1",
     "zod": "3.25.42"
   },
   "devDependencies": {
     "@0no-co/graphqlsp": "^1.12.16",
-    "@eslint/eslintrc": "^3",
-    "@graphql-codegen/cli": "^5.0.5",
+    "@eslint/eslintrc": "^3.3.3",
+    "@graphql-codegen/cli": "^6.1.0",
     "@graphql-codegen/schema-ast": "^4.1.0",
     "@graphql-codegen/typescript-graphql-request": "^6.3.0",
     "@morpho-org/morpho-test": "^2.3.0",
     "@morpho-org/test": "^2.1.3",
     "@parcel/watcher": "^2.5.1",
-    "@playwright/test": "^1.52.0",
+    "@playwright/test": "^1.55.1",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
@@ -83,7 +82,7 @@
     "@types/react-scroll-sync": "^0.9.0",
     "@typescript-eslint/eslint-plugin": "^8.33.0",
     "@typescript-eslint/parser": "^8.33.0",
-    "@vitejs/plugin-react": "^4.3.4",
+    "@vitejs/plugin-react": "^5.1.1",
     "concurrently": "^9.1.2",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
@@ -99,9 +98,17 @@
     "typescript": "^5",
     "typescript-graphql-request": "^4.4.6",
     "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^3.1.2"
+    "vitest": "^3.2.4"
   },
-  "overrides": {
-    "react-is": "^19.0.0-rc-69d4b800-20241021"
+  "pnpm": {
+    "overrides": {
+      "sha.js": ">=2.4.12",
+      "glob": ">=10.5.0",
+      "vite": ">=6.4.1",
+      "brace-expansion@>=1.0.0 <=1.1.11": ">=1.1.12",
+      "brace-expansion@>=2.0.0 <=2.0.1": ">=2.0.2",
+      "@eslint/plugin-kit@<0.3.4": ">=0.3.4",
+      "js-yaml@>=4.0.0 <4.1.1": ">=4.1.1"
+    }
   }
 }
